Fix padding on mobile screens

--- a/src/styles/_components/_footer.scss
+++ b/src/styles/_components/_footer.scss
@@ -5,7 +5,11 @@
 footer {
   position: relative;
   z-index: 3;
-  padding-bottom: 28px;
+  padding-bottom: 24px;
+
+  @media (min-width: 461px) {
+    padding-bottom: 28px;
+  }
 
   a {
     color: #ababab;
